# Ayiti-IA

./: .env.example  .gitignore  .pre-commit-config.yaml  HANDOVER.md  Makefile  PLAN_EXECUTION_COMPLET.md  README.md  TASKS.md  findings.md  progress.md  progression.md  pyproject.toml  requirements.txt  task_plan.md  walkthrough.md
.github/workflows/: ci.yml
Plan/: 00_README_MASTER_PLAN.md  01_ENVIRONNEMENT_ET_SETUP.md  02_STRATEGIE_DE_DONNEES.md  03_ARCHITECTURE_TECHNIQUE.md  04_ENTRAINEMENT_SFT.md  05_EVALUATION_ET_BENCHMARKS.md  06_SECURITE_ET_GUARDRAILS.md  07_RAG_ET_KNOWLEDGE_BASE.md  08_DEPLOIEMENT_ET_INFERENCE.md  09_MONITORING_ET_OBSERVABILITE.md  10_GOUVERNANCE_ET_LICENCES.md  11_ROADMAP_12_SEMAINES.md  12_CHECKLIST_GO_LIVE.md
config/: base.yaml  lid_config.yaml  lid_markers.yaml  lora_config.yaml  training_config.yaml
data/: processed.dvc  raw.dvc
data/raw/: seed_ht.jsonl
docs/adr/: lid_0001_architecture_pyramide.md
docs/plans/: 2026-07-02-setup-environnement-restructuration.md
notebooks/: .gitkeep
scripts/: collect_data.py  download_models.py  run_training.py
src/: __init__.py
src/ayiti_ai/: __init__.py
src/ayiti_ai/data/: __init__.py  builder.py
src/ayiti_ai/evaluation/: __init__.py  metrics.py
src/ayiti_ai/guardrails/: __init__.py
src/ayiti_ai/guardrails/lid/: __init__.py  config.py  exceptions.py  pipeline.py  preprocessing.py  schema.py
src/ayiti_ai/guardrails/lid/levels/: __init__.py  base.py  level1_rules.py  level2_fasttext.py
src/ayiti_ai/inference/: __init__.py  chat.py
src/ayiti_ai/rag/: __init__.py
src/ayiti_ai/training/: __init__.py
src/ayiti_ai/utils/: __init__.py
src/data/: __init__.py  dataset_builder.py
src/evaluation/: __init__.py  metrics.py
src/inference/: __init__.py  chat.py
src/models/: __init__.py  lora_adapter.py  qwen_loader.py
src/training/: __init__.py  trainer.py
tests/: __init__.py  test_dataset_builder.py  test_language_identification.py  test_lora_config.py  test_package_imports.py
