[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ayiti_ai"
version = "0.1.0"
description = "Sovereign Haitian Multimodal AI Platform — Fine-tuning Qwen2.5 for Haitian Creole"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ayiti-AI Team" }
]
license = { text = "Apache-2.0" }
keywords = ["nlp", "haitian-creole", "llm", "fine-tuning", "peft", "lora"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Haitian",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "tokenizers>=0.15.0",
    "openpyxl>=3.1.0",
    "sacrebleu>=2.3.0",
    "rouge-score>=0.1.2",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pre-commit>=3.5.0",
]
rag = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.0",
]

[project.scripts]
ayiti-train   = "ayiti_ai.training.trainer:main"
ayiti-chat    = "ayiti_ai.inference.chat:main"
ayiti-eval    = "ayiti_ai.evaluation.metrics:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths  = ["tests"]
addopts    = "-v --tb=short"

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-length géré par ruff format
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version        = "3.10"
warn_unused_configs   = true
ignore_missing_imports = true
no_implicit_optional  = true
warn_return_any       = true
